--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,53 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-  height:100%;
+html,
+body {
+  height: 100%;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  color: gray;
 }
-.app{
-background: -webkit-linear-gradient(to left, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #2C5364, #203A43, #0F2027);
-height:100vh;
-width:100%;
+.app {
+  background: -webkit-linear-gradient(
+    to left,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #2c5364, #203a43, #0f2027);
+  height: 100vh;
+  width: 100%;
 }
-ul{
-  display:block;
-  width:100%;
-  height:inherit;
+ul {
+  display: block;
+  width: 100%;
+  height: inherit;
 }
-ul{
-  list-style-type:none;
+ul {
+  list-style-type: none;
 }
-li:nth-child(1)
+
+li {
+  animation: animate 15s linear 1s infinite;
+  background: rgba(255, 255, 255, 0.2);
+  position: absolute;
+}
+
+@keyframes animate {
+  from {
+    transform: translateY(+1500%) rotate(180deg);
+  }
+  to {
+    transform: translateY(-150%) rotate(360deg);
+  }
+}
+
+/*
+  li:nth-child(1)
 {
   position:absolute;
   left:10%;
@@ -28,46 +55,6 @@ li:nth-child(1)
   width:30px;
   background:rgba(255,255,255,.2);
 }
-li:nth-child(2)
-{
-  position:absolute;
-  left:30%;
-  height:45px;
-  width:45px;
-  background:rgba(255,255,255,.2);
-}
-li:nth-child(3)
-{
-  position:absolute;
-  left:50%;
-  height:70px;
-  width:70px;
-  background:rgba(255,255,255,.2);
-}
-li:nth-child(4)
-{
-  position:absolute;
-  left:80%;
-  height:20px;
-  width:20px;
-  background:rgba(255,255,255,.2);
-}
-li{
-  animation:animate 15s linear 1s infinite;
-}
-
-@keyframes animate{
-  from{
-    transform: translateY(+1500%) rotate(180deg)
-  }
-  to{
-    transform: translateY(-150%)
-      rotate(360deg)
-  }
-}
-/* 
-
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -92,7 +79,5 @@ li{
   :root {
     --radius: 0.5rem;
   }
-}
-
 
 */
